# argus

./: README  README.md  argus.py  capture.sh  generate_test_pcap.py  pyproject.toml  test.out  test.pcap
docs/: ARCHITECTURE.md  DECISIONS.md
